force-app/main/default/objects/ContractRenewalOpportunityFields__c/ContractRenewalOpportunityFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ContractRenewalOpportunityFields</label>
</CustomObject>