force-app/main/default/objects/ContractRenewalOpportunityFields__c/fields/Opportunity_Business__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Business__c</fullName>
    <description>Default Business value for Opportunities created from BatchContractRenewal.</description>
    <inlineHelpText>Default Business value for Opportunities created from BatchContractRenewal.</inlineHelpText>
    <label>Opportunity Business</label>
    <length>20</length>
    <type>Text</type>
</CustomField>