force-app/main/default/objects/ContractRenewalOpportunityFields__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Default Record Type ID for Opportunities created from BatchContractRenewal.</description>
    <inlineHelpText>Default Record Type ID for Opportunities created from BatchContractRenewal.</inlineHelpText>
    <label>Opportunity Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>