force-app/main/default/objects/ContractRenewalOpportunityFields__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Default Stage for Opportunities created from BatchContractRenewal.</description>
    <inlineHelpText>Default Stage for Opportunities created from BatchContractRenewal.</inlineHelpText>
    <label>Opportunity Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>